[FLO-208] Updated CLIENT_APP_URL

--- a/src/components/utils/mail/templates/partials/subscriber-email.hbs
+++ b/src/components/utils/mail/templates/partials/subscriber-email.hbs
@@ -2,7 +2,7 @@
     <div class="welcome">
         <h2>Welcome to FLO</h2>
         <p>We are excited for you to get started. First, you need to log in using the following credentials:</p>
-        <a href="{{clientAppURL}}/auth/login">Log In</a>
+        <a href="{{clientAppURL}}/#/auth/login">Log In</a>
     </div>
     <div class="credential-group">
         <div class="input-field">
