--- a/src/@utils/mail/templates/partials/subscription-updated.hbs
+++ b/src/@utils/mail/templates/partials/subscription-updated.hbs
@@ -1,7 +1,7 @@
 <div class="content">
     <div class="welcome">
         <h2>Hello {{email}},</h2>
-        <p>Your subscription in FLO has been updated in <b>{{currentCompany}}</b>:</p>
+        <p>Your subscription in {{appName}} has been updated in <b>{{currentCompany}}</b>:</p>
     </div>
     <div class="credential-group">
         <div class="input-field">
