--- a/src/@utils/mail/templates/partials/user-disabled.hbs
+++ b/src/@utils/mail/templates/partials/user-disabled.hbs
@@ -1,6 +1,6 @@
 <div class="content">
     <div class="welcome">
-        <h2>FLO {{type}} disabled</h2>
+        <h2>{{appName}} {{type}} disabled</h2>
         <p>Your {{type}} has been disabled.</p>
     </div>
     <div class="credential-group">
