[BB-70]: Update user create for organization and added registration of user to blockchain

--- a/src/@utils/mail/templates/partials/getting-started.hbs
+++ b/src/@utils/mail/templates/partials/getting-started.hbs
@@ -17,5 +17,9 @@
             <label for="password">Password</label>
             <span id="password">{{password}}</span>
         </div>
+        <div class="input-field">
+            <label for="loginKey">Key</label>
+            <span id="loginKey">{{bcKey}}</span>
+        </div>
     </div>
 </div>
