--- a/src/@utils/mail/templates/partials/getting-started.hbs
+++ b/src/@utils/mail/templates/partials/getting-started.hbs
@@ -1,25 +1,30 @@
-<div class="content">
-    <div class="welcome">
+<div class='content'>
+    <div class='welcome'>
         <h2>Welcome to {{appName}}</h2>
         <p>We are excited for you to get started. First, you need to log in using the following credentials:</p>
-        <a href="{{clientAppURL}}/#/auth/login">Log In</a>
+        <a href='{{clientAppURL}}/#/auth/login'>Log In</a>
     </div>
-    <div class="credential-group">
-        <div class="input-field">
-            <label for="subscriptionType">Subscription</label>
-            <span id="subscriptionType">{{subscriptionType}}</span>
+    <div class='credential-group'>
+        <div class='input-field'>
+            <label for='subscriptionType'>Subscription</label>
+            <span id='subscriptionType'>{{subscriptionType}}</span>
         </div>
-        <div class="input-field">
-            <label for="email">Email</label>
-            <span id="email">{{email}}</span>
+        <div class='input-field'>
+            <label for='email'>Email</label>
+            <span id='email'>{{email}}</span>
         </div>
-        <div class="input-field">
-            <label for="password">Password</label>
-            <span id="password">{{password}}</span>
+        <div class='input-field'>
+            <label for='password'>Password</label>
+            <span id='password'>{{password}}</span>
         </div>
-        <div class="input-field">
-            <label for="loginKey">Key</label>
-            <span id="loginKey">{{bcKey}}</span>
+        <div class='input-field'>
+            <label for='loginKey'>Key</label>
+            <span id='loginKey'>{{bcKey}}</span>
+        </div>
+        <div class='input-field'>
+            <span id='loginKey'>Your Oracle cloud credentials are sent on
+                {{email}}. Please Check the mail
+            </span>
         </div>
     </div>
 </div>
