[BB-111]: added user in oracle group

--- a/src/@utils/mail/templates/rootmail.hbs
+++ b/src/@utils/mail/templates/rootmail.hbs
@@ -49,7 +49,7 @@
             border-bottom: 1px solid rgb(232, 232, 232);
         }
 
-        .welcome a {
+        .login a {
             background-color: #363636;
             border: none;
             border-radius: 5px;
@@ -107,6 +107,11 @@
         th,
         td {
             padding: 2px 4px;
+        }
+
+        .email{
+            color:#a3a318 !important;
+            text-decoration: underline;
         }
     </style>
 </head>
