--- a/src/@utils/mail/templates/partials/getting-started.hbs
+++ b/src/@utils/mail/templates/partials/getting-started.hbs
@@ -1,8 +1,7 @@
 <div class='content'>
     <div class='welcome'>
-        <h2>Welcome to {{appName}}</h2>
-        <p>We are excited for you to get started. First, you need to log in using the following credentials:</p>
-        <a href='{{clientAppURL}}/#/auth/login'>Log In</a>
+        <h2>Welcome to {{appName}}!</h2>
+        <p>We are excited for having you in the {{appName}} project. Please use following credentials and instructions to login into {{appName}} web application</p>
     </div>
     <div class='credential-group'>
         <div class='input-field'>
@@ -11,20 +10,22 @@
         </div>
         <div class='input-field'>
             <label for='email'>Email</label>
-            <span id='email'>{{email}}</span>
+            <span id='email' class='email'>{{email}}</span>
         </div>
         <div class='input-field'>
             <label for='password'>Password</label>
             <span id='password'>{{password}}</span>
         </div>
         <div class='input-field'>
-            <label for='loginKey'>Key</label>
+            <label for='loginKey'>Blockchain Key</label>
             <span id='loginKey'>{{bcKey}}</span>
         </div>
-        <div class='input-field'>
-            <span id='loginKey'>Your Oracle cloud credentials are sent on
-                {{email}}. Please Check the mail
-            </span>
+        <div class='login'>
+            <a href='{{clientAppURL}}/#/auth/login'>Log In</a>
+            <div>
+                Since your are going to use Oracle Cloud for AI tasks, your credentials has been created in the cloud and sent to your email id
+                <span class='email'>{{email}}</span>. Please activate your oracle account as well.
+            </div>
         </div>
     </div>
 </div>
