[BB-133]: update email tempalte as BTA team

--- a/src/@utils/mail/templates/rootmail.hbs
+++ b/src/@utils/mail/templates/rootmail.hbs
@@ -118,7 +118,7 @@
 
 <body>
     <header>
-        <img src="{{clientAppURL}}/assets/images/logo/base-logo.png" alt="flo-logo" height="50" />
+        <img src="{{clientAppURL}}/assets/images/logo/base-logo.png" alt="bta-logo" height="50" />
     </header>
     <div class="part-container">
         {{> (whichMail) partialContext}}
@@ -132,7 +132,7 @@
         <div class="thank-you">
             <p>Thank you,</p>
             <p>Kilroy Blockchain</p>
-            <p>FLO Team</p>
+            <p>BTA Team</p>
         </div>
     </footer>
 </body>
