--- a/src/@utils/mail/templates/partials/getting-started.hbs
+++ b/src/@utils/mail/templates/partials/getting-started.hbs
@@ -1,7 +1,7 @@
 <div class='content'>
     <div class='welcome'>
         <h2>Welcome to {{appName}}!</h2>
-        <p>We are excited for having you in the {{appName}} project. Please use following credentials and instructions to login into {{appName}} web application</p>
+        <p>You will need your email, password and blockchain key to log in, which are shown below.</p>
     </div>
     <div class='credential-group'>
         <div class='input-field'>
