[BB-170]: Fix typo on welcome email

--- a/src/@utils/mail/templates/partials/getting-started.hbs
+++ b/src/@utils/mail/templates/partials/getting-started.hbs
@@ -23,8 +23,8 @@
         <div class='login'>
             <a href='{{clientAppURL}}/#/auth/login'>Log In</a>
             <div>
-                Since your are going to use Oracle Cloud for AI tasks, your credentials has been created in the cloud and sent to your email id
-                <span class='email'>{{email}}</span>. Please activate your oracle account as well.
+                Since you're going to use Oracle Cloud for AI tasks, your credentials has been created in the cloud and sent to your email id
+                <span class='email'>{{email}}</span>. Please activate your Oracle account as well.
             </div>
         </div>
     </div>
